| Bug #27254 | Single User Mode.Mysql hangs if it tries delete a ndb table | ||
|---|---|---|---|
| Submitted: | 19 Mar 2007 11:39 | Modified: | 28 Mar 2007 12:50 |
| Reporter: | Serge Kozlov | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1.17-bk | OS: | Linux (Linux FC4 64bit) |
| Assigned to: | Tomas Ulin | Target Version: | |
[19 Mar 2007 11:39]
Serge Kozlov
[21 Mar 2007 10:08]
Tomas Ulin
serge, this is a "known" issue which needs to be fixed, setting to verified it is actually not a hang... a timeout happens after a while
[23 Mar 2007 10:55]
Tomas Ulin
bug fix
Attachment: tmp.patch (text/x-patch), 23.06 KiB.
[23 Mar 2007 16:59]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/22800 ChangeSet@1.2501, 2007-03-23 17:12:06+01:00, tomas@whalegate.ndb.mysql.com +2 -0 BUG#27254: Single User Mode.Mysql hangs if it tries delete a ndb table
[23 Mar 2007 23:15]
Tomas Ulin
telco 6.2.1
[28 Mar 2007 10:03]
Tomas Ulin
bug is fixed, and bug was never in released version
[28 Mar 2007 12:50]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented fix in mysql-5.1.16-ndb-6.2.1 changelog.
