BUG#27254: Single User Mode.Mysql hangs if it tries delete a ndb table

sql/ha_ndbcluster.cc:
  set single user mode on ndb schema table
storage/ndb/src/ndbapi/NdbDictionaryImpl.cpp:
  dbug print